# momentum-observer-mujoco

./: .gitignore  CMakeLists.txt  MomentumObserver.cpp  MomentumObserver.hpp  MujocoUI.cpp  MujocoUI.hpp  README.md  main_iiwa14.cpp  main_ur10.cpp
robot/: ur10_scene.xml
robot/kuka_iiwa_14/: iiwa14.xml  iiwa14_no_collision.urdf  scene.xml
robot/ur10/: ur10.urdf  ur10_robot.xml
